target/main/zcode/parser/ZCodeParser.py
# Generated from main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'number'", "'bool'", "'string'", 
                     "'var'", "'dynamic'", "'return'", "'func'", "'for'", 
                     "'until'", "'by'", "'break'", "'continue'", "'if'", 
                     "'else'", "'elif'", "'begin'", "'end'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'not'", "'and'", "'or'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'...'", "'<-'", 
                     "'='", "'['", "']'", "'('", "')'", "','", "':'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "NEWLINE", "TYPE_NUMBER", "TYPE_BOOL", 
                      "TYPE_STRING", "VAR", "DYNAMIC", "RETURN", "FUNC", 
                      "FOR", "UNTIL", "BY", "BREAK", "CONTINUE", "IF", "ELSE", 
                      "ELIF", "BEGIN", "END", "ADD_OP", "SUB_OP", "MUL_OP", 
                      "DIV_OP", "MOD_OP", "NOT_OP", "AND_OP", "OR_OP", "EQ_OP", 
                      "NEQ_OP", "LT_OP", "LEQ_OP", "GT_OP", "GEQ_OP", "CONCAT_OP", 
                      "ASSIGN_OP", "EQ", "LSB", "RSB", "LRB", "RRB", "CM", 
                      "COL", "QUOTES", "LINE_CMT", "WS", "BOOLLIT", "NUMBERLIT", 
                      "STRINGLIT", "IDENTIFIER", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decls_tail = 2
    RULE_decl = 3
    RULE_var_decl = 4
    RULE_keyword_var = 5
    RULE_keyword_var_decl = 6
    RULE_keyword_var_array_decl = 7
    RULE_arraydim = 8
    RULE_listdim = 9
    RULE_type_vardecl = 10
    RULE_implicit_var = 11
    RULE_implicit_dynamic = 12
    RULE_func_decl = 13
    RULE_func_decl_complete = 14
    RULE_func_decl_prototype = 15
    RULE_body = 16
    RULE_body_one = 17
    RULE_param_decls = 18
    RULE_param_decl_tail = 19
    RULE_param_decl = 20
    RULE_statement = 21
    RULE_assign_stmt = 22
    RULE_array_index_expr = 23
    RULE_list_expr = 24
    RULE_expr_tail = 25
    RULE_break_stmt = 26
    RULE_continue_stmt = 27
    RULE_return_stmt = 28
    RULE_func_call_stmt = 29
    RULE_func_call = 30
    RULE_if_stmt = 31
    RULE_list_elif = 32
    RULE_elif_one = 33
    RULE_for_stmt = 34
    RULE_expr = 35
    RULE_expr1 = 36
    RULE_expr2 = 37
    RULE_expr3 = 38
    RULE_expr4 = 39
    RULE_expr5 = 40
    RULE_expr6 = 41
    RULE_expr7 = 42
    RULE_factor = 43
    RULE_sub_expr = 44
    RULE_list_newline = 45
    RULE_arraylit = 46
    RULE_itemlist = 47
    RULE_item = 48

    ruleNames =  [ "program", "decls", "decls_tail", "decl", "var_decl", 
                   "keyword_var", "keyword_var_decl", "keyword_var_array_decl", 
                   "arraydim", "listdim", "type_vardecl", "implicit_var", 
                   "implicit_dynamic", "func_decl", "func_decl_complete", 
                   "func_decl_prototype", "body", "body_one", "param_decls", 
                   "param_decl_tail", "param_decl", "statement", "assign_stmt", 
                   "array_index_expr", "list_expr", "expr_tail", "break_stmt", 
                   "continue_stmt", "return_stmt", "func_call_stmt", "func_call", 
                   "if_stmt", "list_elif", "elif_one", "for_stmt", "expr", 
                   "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", 
                   "expr7", "factor", "sub_expr", "list_newline", "arraylit", 
                   "itemlist", "item" ]

    EOF = Token.EOF
    NEWLINE=1
    TYPE_NUMBER=2
    TYPE_BOOL=3
    TYPE_STRING=4
    VAR=5
    DYNAMIC=6
    RETURN=7
    FUNC=8
    FOR=9
    UNTIL=10
    BY=11
    BREAK=12
    CONTINUE=13
    IF=14
    ELSE=15
    ELIF=16
    BEGIN=17
    END=18
    ADD_OP=19
    SUB_OP=20
    MUL_OP=21
    DIV_OP=22
    MOD_OP=23
    NOT_OP=24
    AND_OP=25
    OR_OP=26
    EQ_OP=27
    NEQ_OP=28
    LT_OP=29
    LEQ_OP=30
    GT_OP=31
    GEQ_OP=32
    CONCAT_OP=33
    ASSIGN_OP=34
    EQ=35
    LSB=36
    RSB=37
    LRB=38
    RRB=39
    CM=40
    COL=41
    QUOTES=42
    LINE_CMT=43
    WS=44
    BOOLLIT=45
    NUMBERLIT=46
    STRINGLIT=47
    IDENTIFIER=48
    UNCLOSE_STRING=49
    ILLEGAL_ESCAPE=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(ZCodeParser.DeclsContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def list_newline(self):
            return self.getTypedRuleContext(ZCodeParser.List_newlineContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZCodeParser.NEWLINE:
                self.state = 98
                self.list_newline()


            self.state = 101
            self.decls()
            self.state = 102
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(ZCodeParser.DeclContext,0)


        def decls_tail(self):
            return self.getTypedRuleContext(ZCodeParser.Decls_tailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = ZCodeParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.decl()
            self.state = 105
            self.decls_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decls_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(ZCodeParser.DeclContext,0)


        def decls_tail(self):
            return self.getTypedRuleContext(ZCodeParser.Decls_tailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decls_tail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls_tail" ):
                return visitor.visitDecls_tail(self)
            else:
                return visitor.visitChildren(self)




    def decls_tail(self):

        localctx = ZCodeParser.Decls_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decls_tail)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.TYPE_NUMBER, ZCodeParser.TYPE_BOOL, ZCodeParser.TYPE_STRING, ZCodeParser.VAR, ZCodeParser.DYNAMIC, ZCodeParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.decl()
                self.state = 108
                self.decls_tail()
                pass
            elif token in [ZCodeParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Var_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Func_declContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = ZCodeParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.TYPE_NUMBER, ZCodeParser.TYPE_BOOL, ZCodeParser.TYPE_STRING, ZCodeParser.VAR, ZCodeParser.DYNAMIC]:
                self.state = 113
                self.var_decl()
                pass
            elif token in [ZCodeParser.FUNC]:
                self.state = 114
                self.func_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_newline(self):
            return self.getTypedRuleContext(ZCodeParser.List_newlineContext,0)


        def keyword_var(self):
            return self.getTypedRuleContext(ZCodeParser.Keyword_varContext,0)


        def implicit_var(self):
            return self.getTypedRuleContext(ZCodeParser.Implicit_varContext,0)


        def implicit_dynamic(self):
            return self.getTypedRuleContext(ZCodeParser.Implicit_dynamicContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = ZCodeParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.TYPE_NUMBER, ZCodeParser.TYPE_BOOL, ZCodeParser.TYPE_STRING]:
                self.state = 117
                self.keyword_var()
                pass
            elif token in [ZCodeParser.VAR]:
                self.state = 118
                self.implicit_var()
                pass
            elif token in [ZCodeParser.DYNAMIC]:
                self.state = 119
                self.implicit_dynamic()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 122
            self.list_newline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Keyword_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def keyword_var_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Keyword_var_declContext,0)


        def keyword_var_array_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Keyword_var_array_declContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_keyword_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeyword_var" ):
                return visitor.visitKeyword_var(self)
            else:
                return visitor.visitChildren(self)




    def keyword_var(self):

        localctx = ZCodeParser.Keyword_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_keyword_var)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.keyword_var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.keyword_var_array_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Keyword_var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_vardecl(self):
            return self.getTypedRuleContext(ZCodeParser.Type_vardeclContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def ASSIGN_OP(self):
            return self.getToken(ZCodeParser.ASSIGN_OP, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_keyword_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeyword_var_decl" ):
                return visitor.visitKeyword_var_decl(self)
            else:
                return visitor.visitChildren(self)




    def keyword_var_decl(self):

        localctx = ZCodeParser.Keyword_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_keyword_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.type_vardecl()
            self.state = 129
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZCodeParser.ASSIGN_OP:
                self.state = 130
                self.match(ZCodeParser.ASSIGN_OP)
                self.state = 131
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Keyword_var_array_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_vardecl(self):
            return self.getTypedRuleContext(ZCodeParser.Type_vardeclContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def arraydim(self):
            return self.getTypedRuleContext(ZCodeParser.ArraydimContext,0)


        def ASSIGN_OP(self):
            return self.getToken(ZCodeParser.ASSIGN_OP, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_keyword_var_array_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeyword_var_array_decl" ):
                return visitor.visitKeyword_var_array_decl(self)
            else:
                return visitor.visitChildren(self)




    def keyword_var_array_decl(self):

        localctx = ZCodeParser.Keyword_var_array_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_keyword_var_array_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.type_vardecl()
            self.state = 135
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 136
            self.arraydim()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZCodeParser.ASSIGN_OP:
                self.state = 137
                self.match(ZCodeParser.ASSIGN_OP)
                self.state = 138
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraydimContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(ZCodeParser.LSB, 0)

        def listdim(self):
            return self.getTypedRuleContext(ZCodeParser.ListdimContext,0)


        def RSB(self):
            return self.getToken(ZCodeParser.RSB, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_arraydim

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraydim" ):
                return visitor.visitArraydim(self)
            else:
                return visitor.visitChildren(self)




    def arraydim(self):

        localctx = ZCodeParser.ArraydimContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arraydim)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(ZCodeParser.LSB)
            self.state = 142
            self.listdim()
            self.state = 143
            self.match(ZCodeParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListdimContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBERLIT(self):
            return self.getToken(ZCodeParser.NUMBERLIT, 0)

        def CM(self):
            return self.getToken(ZCodeParser.CM, 0)

        def listdim(self):
            return self.getTypedRuleContext(ZCodeParser.ListdimContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_listdim

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListdim" ):
                return visitor.visitListdim(self)
            else:
                return visitor.visitChildren(self)




    def listdim(self):

        localctx = ZCodeParser.ListdimContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_listdim)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.match(ZCodeParser.NUMBERLIT)
                self.state = 146
                self.match(ZCodeParser.CM)
                self.state = 147
                self.listdim()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(ZCodeParser.NUMBERLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_vardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_NUMBER(self):
            return self.getToken(ZCodeParser.TYPE_NUMBER, 0)

        def TYPE_BOOL(self):
            return self.getToken(ZCodeParser.TYPE_BOOL, 0)

        def TYPE_STRING(self):
            return self.getToken(ZCodeParser.TYPE_STRING, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_type_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_vardecl" ):
                return visitor.visitType_vardecl(self)
            else:
                return visitor.visitChildren(self)




    def type_vardecl(self):

        localctx = ZCodeParser.Type_vardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.TYPE_NUMBER) | (1 << ZCodeParser.TYPE_BOOL) | (1 << ZCodeParser.TYPE_STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Implicit_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(ZCodeParser.VAR, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def ASSIGN_OP(self):
            return self.getToken(ZCodeParser.ASSIGN_OP, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_implicit_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImplicit_var" ):
                return visitor.visitImplicit_var(self)
            else:
                return visitor.visitChildren(self)




    def implicit_var(self):

        localctx = ZCodeParser.Implicit_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_implicit_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(ZCodeParser.VAR)
            self.state = 154
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 155
            self.match(ZCodeParser.ASSIGN_OP)
            self.state = 156
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Implicit_dynamicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DYNAMIC(self):
            return self.getToken(ZCodeParser.DYNAMIC, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def ASSIGN_OP(self):
            return self.getToken(ZCodeParser.ASSIGN_OP, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_implicit_dynamic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImplicit_dynamic" ):
                return visitor.visitImplicit_dynamic(self)
            else:
                return visitor.visitChildren(self)




    def implicit_dynamic(self):

        localctx = ZCodeParser.Implicit_dynamicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_implicit_dynamic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(ZCodeParser.DYNAMIC)
            self.state = 159
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZCodeParser.ASSIGN_OP:
                self.state = 160
                self.match(ZCodeParser.ASSIGN_OP)
                self.state = 161
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl_prototype(self):
            return self.getTypedRuleContext(ZCodeParser.Func_decl_prototypeContext,0)


        def func_decl_complete(self):
            return self.getTypedRuleContext(ZCodeParser.Func_decl_completeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = ZCodeParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_func_decl)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.func_decl_prototype()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.func_decl_complete()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_decl_completeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ZCodeParser.FUNC, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LRB(self):
            return self.getToken(ZCodeParser.LRB, 0)

        def param_decls(self):
            return self.getTypedRuleContext(ZCodeParser.Param_declsContext,0)


        def RRB(self):
            return self.getToken(ZCodeParser.RRB, 0)

        def body(self):
            return self.getTypedRuleContext(ZCodeParser.BodyContext,0)

